syntax = "proto3";

package blog;

option go_package = "/pb;blog";

service BlogService {
    rpc CreatePost(CreatePostRequest) returns (PostResponse);
    rpc ReadPost(ReadPostRequest) returns (PostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

message Post {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    string publication_date = 5;
    repeated string tags = 6;
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
    string author = 3;
    string publication_date = 4;
    repeated string tags = 5;
}

message ReadPostRequest {
    string post_id = 1;
}

message UpdatePostRequest {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    repeated string tags = 5;
}

message DeletePostRequest {
    string post_id = 1;
}

message PostResponse {
    Post post = 1;
    string error = 2;
}

message DeletePostResponse {
    string message = 1;
    string error = 2;
}
